--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -455,6 +455,42 @@
     Volume = {63},
     Year = {1976}}
 
+@incollection{2008:cattaneo,
+    Author = {Cattaneo, M.},
+    Booktitle = {Soft Methods for Handling Variability and Imprecision},
+    Editor = {Dubois, D. and Lubiano, M. and Prade, H. and Gil, M. and Grzegorzewski, P. and Hryniewicz, O.},
+    Pages = {43--50},
+    Publisher = {Springer},
+    Title = {Fuzzy Probabilities Based on the Likelihood Function},
+    Volume = 48,
+    Year = 2008}
+
+@phdthesis{2007a:cattaneo,
+    Author = {M. Cattaneo},
+    School = {ETH Zurich (available from http://dx.doi.org/10.3929/ethz-a-005463829)},
+    Title = {Statistical Decisions Based Directly on the Likelihood Function},
+    Url = {http://dx.doi.org/10.3929/ethz-a-005463829},
+    Year = 2007}
+
+@techreport{2012:cattaneo-technicalRep,
+    Author = {M. Cattaneo},
+    Institution = {Department of Statistics, LMU Munich},
+    Number = {128 (available from http://epub.ub.uni-muenchen.de/13713/)},
+    Title = {Likelihood decision functions},
+    Url = {http://epub.ub.uni-muenchen.de/13713/},
+    Year = 2012}
+
+@INPROCEEDINGS{2011:4:isipta,
+  author = {Antonucci, A. and Cattaneo, M. and Corani, G.},
+  title = {Likelihood-Based Naive Credal Classifier},
+  booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on
+    Imprecise Probability: Theories and Applications},
+  year = {2011},
+  editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
+  pages = {21--30},
+  address = {Innsbruck},
+  publisher = {SIPTA}
+}
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
