--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -506,10 +506,21 @@ imprecise probability models allow for adequate modeling of partial information 
 and will ultimately result in more reliable inferences.
 
 
+****more on parameter set shapes?****
+
+***Festschrift paper \parencite{Walter2010a} somewhere here or in Appendix?***
+
+
 \section{***JSTP paper***}
 
 
+\section{***BA Norbert Krautenbacher?***}
+
+
 \section{***Isipta'11 paper***}
+
+
+\section{***boatshape stuff?***}
 
 
 \section{***Alternative Models Based on Sets of Priors}
@@ -519,9 +530,9 @@ and will ultimately result in more reliable inferences.
 
 \bigskip
 
-par on withcomb, then rewrite this:
+par on whitcomb, then rewrite this:
 
-``Some computational aspects'' from \textcite[\S 4.2]{itip-statinf} on discretized models (Withcomb!)***
+``Some computational aspects'' from \textcite[\S 4.2]{itip-statinf} on discretized models (Whitcomb!)***
 
 In the case of discrete prior distributions (i.e., distributions with a finite support of size $k$)
 %(where the unknown parameter can only assume a fixed number $k$ of values, $k < \infty$),
