diss: structure change, section renamed, bibliography as toc entry

--- a/diss.tex
+++ b/diss.tex
@@ -81,7 +81,7 @@
   %\bibliography{bib/eigene,bib/itip-refs,bib/other-refs}
   %\markboth{Bibliography}{Bibliography}
   
-  \printbibliography
+  \printbibliography[heading=bibnumbered]
 
  % \include{danksagung}
 
