diss: fixed warnings that appeared in diss.log

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -115,7 +115,7 @@
     note = {Accepted for publication at: Reliability Engineering \& System Safety},
     Pages = {},
     Volume = {},
-    Month = {January},
+    Month = {1},
     Year = {2013},
     howpublished = {Preprint available at \url{http://arxiv.org/abs/1301.0533}},
 }
