--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -165,7 +165,7 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   editor = {Ishack, G. and Fourest, B. and Kotthoff, K. and Macleod, J.S. and Baranowsky, P. and Morimoto, K.},
   publisher = {OECD Nuclear Energy Agency},
   note = {CSNI Report No.~115},
-  month = {February},
+  month = {2},
   address = {Paris, France},
 }
 
