--- a/intro.tex
+++ b/intro.tex
@@ -343,7 +343,7 @@ where in turn $\E[\nabla\mbf{b}(\psi) \mid \nz, \yz] = \yz$ \parencite[e.g.,][Pr
 Characteristically, $\yn$ is a weighted average of this prior guess $\yz$ and the sample `mean' $\ttau(\x)$,
 with weights $\nz$ and $n$, respectively.%
 \footnote{This weighted average property of Bayesian updating with conjugate priors is an important issue
-we comment on ***later / in Section~\ref{}***.}
+we comment on ***later / in Section~*****.}
 Therefore, $\nz$ can be seen as ``prior strength'' or ``pseudocounts'',
 reflecting the weight one gives to the prior as compared to the sample size $n$.
 To make this more explicit, $\nz$ can be interpreted as the size of an imaginary sample
