diss: updating sources section 1.1

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -471,7 +471,7 @@ by an imprecise prior distribution,
 and all inferences shall be based on a (imprecise) posterior distribution derived from it.
 As in Bayesian inference with precise distributions,
 the now imprecise prior should be conditioned on the observed data $\x$.%
-\footnote{***footnote on updating and conditioning, from itip chapter***}
+\footnote{\label{foot:updating}***footnote on updating and conditioning, from itip chapter***}
 
 A coherent lower prevision can be conditioned on an event $B$
 by using the so-called \emph{Generalised Bayes' Rule} \parencite[\S 6.4]{1991:walley},
@@ -734,6 +734,7 @@ we first want to point out a foundational motive for the use of imprecise probab
 before we come to more specific motives.
 
 \subsubsection{Foundational Motive}
+\label{sec:motivation:bayesian-foundational}
 
 We agree with \textcite[\S 1.1]{1994:berger} in the view that there are very strong foundational arguments
 for the subjective Bayesian approach, which, however, hold only
