diss: foraging from itip-statinf 4.4

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -40,7 +40,7 @@
     Pages = {255--271},
     Volume = {3},
     Year = {2009},
-    note = {Reprinted as book chapter in Pauline Coolen-Schrijner, Frank P.A. Coolen, Matthias C.M. Troffaes, Thomas Augustin, and Sat Gupta, editors, \emph{{Imprecision in Statistical Theory and Practice}}, Grace Scientific Publishing, 2009 },
+    Note = {Reprinted in \textcite{2009:CoolenSchrijner}},
     issn = {1559-8616},
 }
 
@@ -51,6 +51,26 @@
     Pages = {255--271},
     Volume = {3},
     Year = {2009},
+}
+
+@article{Walter2009a-long,
+    Author = {Gero Walter and Thomas Augustin},
+    Title = {Imprecision and Prior-data Conflict in Generalized {B}ayesian Inference},
+    Journal = {Journal of Statistical Theory and Practice},
+    Pages = {255--271},
+    Volume = {3},
+    Year = {2009},
+    note = {Reprinted as book chapter in Pauline Coolen-Schrijner, Frank P.A. Coolen, Matthias C.M. Troffaes, Thomas Augustin, and Sat Gupta, editors, \emph{{Imprecision in Statistical Theory and Practice}}, Grace Scientific Publishing, 2009 },
+    issn = {1559-8616},
+}
+
+@BOOK{2009:CoolenSchrijner,
+  title = {Imprecision in Statistical Theory and Practice},
+  publisher = {Grace Scientific Publishing LLC},
+  year = {2009},
+  author = {Coolen-Schrijner, P. and Coolen, F. and Troffaes, M. and Augustin,
+    T. and Gupta, S. },
+  address = {Greensboro, NC, USA }
 }
 
 @TECHREPORT{Walter2009b,
