--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -218,7 +218,6 @@
   editor = {D. Dey and C. Rao},
   volume = {25},
   pages = {623 - 667},
-  bdsk-url-1 = {http://dx.doi.org/10.1016/S0169-7161(05)25021-6},
   doi = {10.1016/S0169-7161(05)25021-6},
   issn = {0169-7161}
 }
@@ -491,6 +490,123 @@
   address = {Innsbruck},
   publisher = {SIPTA}
 }
+
+@article{1993:coolen,
+  author = "Frank P.A. Coolen",
+  title = "Imprecise conjugate prior densities for the one-parameter exponential family of distributions",
+  journal = "Statistics \& Probability Letters",
+  volume = "16",
+  pages = "337--342",
+  year = "1993",
+}
+
+@article{1994:coolen,
+  author = "Coolen, F.",
+  title = "On {B}ernoulli experiments with imprecise prior probabilities",
+  journal = "The Statistician",
+  volume = "43",
+  pages = "155 - 167",
+  year = "1994",
+}
+
+@phdthesis{1994:coolen::phd,
+  Author = {Coolen, F.},
+    School = {Eindhoven Technical University},
+    Title = {Statistical Modeling of Expert Opinions using Imprecise Probabilities},
+    Year = {1993},
+  Note = {Available from \url{http://alexandria.tue.nl/extra3/proefschrift/PRF9B/9305256.pdf}},
+}
+
+@article{2009:bickis,
+    Author = {M. Bickis},
+    Journal = {Journal of Statistical Theory and Practice},
+    Note = {Reprinted in \textcite{2009:CoolenSchrijner}},
+    Pages = {183--195},
+    Title = {The imprecise logit-normal model and its application to estimating hazard functions},
+    Volume = {3},
+    Year = {2009}}
+
+@incollection{2000:bergerinsuaruggeri,
+    Author = {J.  Berger and  D. R\'{\i}os Insua and F. Ruggeri},
+    Booktitle = {{Robust {B}ayesian Analysis}},
+    Editor = {D. R\'{\i}os Insua and F. Ruggeri},
+    Pages = {1-31},
+    Publisher = {Springer},
+    Address = {Berlin},
+    Title = {{B}ayesian Robustness},
+    Year = {2000}}
+
+@ARTICLE{1991:pericchi,
+  author = {Pericchi, L. and Walley, P.},
+  title = {Robust {B}ayesian credible intervals and prior ignorance},
+  journal = {International Statistical Review},
+  year = {1991},
+  volume = {59},
+  pages = {1--23}
+}
+
+@incollection{2000:shyamalkumar,
+    Address = {New York},
+    Author = {Shyamalkumar, N.},
+    Booktitle = {Robust {B}ayesian {A}nalysis},
+    Editor = {D. R\'{\i}os Insua and F. Ruggeri},
+    Pages = {127--143},
+    Publisher = {Springer},
+    Title = {Likelihood robustness},
+    Year = {2000}}
+
+@inproceedings{2003:augustin,
+    Address = {Waterloo},
+    Author = {Augustin, T.},
+    Booktitle = {ISIPTA '03: Proceedings of the Third International Symposium on Imprecise Probabilities and their Applications},
+    Editor = {Bernard, J. and Seidenfeld, T. and Zaffalon, M.},
+    Pages = {31--45},
+    Publisher = {Carleton Scientific},
+    Title = {On the suboptimality of the generalized {B}ayes rule and robust {B}ayesian procedures from the decision theoretic point of view: {A} cautionary note on updating imprecise priors},
+    Year = 2003}
+}
+
+@Article{2001:NoubiapSeidel,
+    author = {R. Noubiap and W. Seidel},
+    title = {An algorithm for calculating {$\Gamma$}-minimax decision rules under generalized moment conditions},
+    year  ={2001},
+    journal = {Annals of Statistics},
+    volume = {29},
+    pages = {1094--1116}
+}
+
+@ARTICLE{Augustin5:2004,
+   author = {Augustin, T.},
+   year = 2004,
+   title = {Optimal decisions under complex uncertainty---basic notions and a
+           general algorithm for data-based decision making with partial prior
+           knowledge described by interval probability},
+   volume = 84,
+   pages = {678--687},
+   url = {http://dx.doi.org/10.1002/zamm.200410151},
+   journal = {ZAMM. Zeitschrift f\"ur Angewandte Mathematik und Mechanik.
+              Journal of Applied Mathematics and Mechanics}
+}
+
+@article{2007:held,
+    Author = {H. Held and E. Kriegler and T. Augustin},
+    Fjournal = {Internat. J. Approx. Reason.},
+    Journal = {International Journal of Approximate Reasoning},
+    Title = {Bayesian Learning for a Class of Priors with Prescribed Marginals},
+    Volume = {49},
+    Pages = {212--233},
+    Year = {2008}}
+
+@ARTICLE{1982:walley,
+  author = {Walley, P. and Fine, T.},
+  title = {Towards a frequentist theory of upper and lower probability},
+  journal = {Annals of Statistics},
+  year = {1982},
+  volume = {10},
+  pages = {741--761}
+}
+
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
