--- a/intro.tex
+++ b/intro.tex
@@ -33,8 +33,8 @@ However, Section~\ref{sec:commoncause-motivation} was newly written for this the
 
 Sec.~\ref{sec:ip-intro} was newly written for this thesis,
 except Sec.~\ref{sec:imprecisebayes}, which is based on \textcite[\S 4.2]{itip-statinf},
-and footnote no.~\ref{foot:updating} on page~\pageref{foot:updating},
-which is based on parts of \textcite[\S 4.4]{itip-statinf}.
+and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf},
+where the latter was mainly written by Thomas Augustin.
 
 Also Sec.~\ref{sec:motivation} was devised especially for the thesis,
 under use of \textcite[\S 2.3]{itip-statinf} for the last paragraph in
